--- a/projecte/package.json
+++ b/projecte/package.json
@@ -1,7 +1,6 @@
 {
   "name": "projecte",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.3"
-  }
+  },
+  "description": ""
 }
